<resources>
    <string name="app_name">LazyBirdProject</string>
    <string name="splash_start_button">시작하기</string>
    <string name="sign_in">회원가입</string>
    <string name="sign_in_u"><u>회원가입</u></string>
    <string name="login">로그인</string>
    <string name="login_u"><u>로그인</u></string>
    <string name="google_server_client_id">377487106171-0oreikaf41a5hete6us9pp3hdv1v86ea.apps.googleusercontent.com</string>
    <string name="login_google">Google로 시작하기</string>
    <string name="sign_in_google">Google로 시작하기</string>
    <string name="login_kakao">카카오로 시작하기</string>
    <string name="sign_in_kakao">카카오로 시작하기</string>
    <string name="native_app_key">ed1671c07f7f99c3ad5e2640429b8dab</string>
    <string name="on_boarding_start_button">전시 성향 분석하러 가기</string>
    <string name="on_boarding_to_be_next">다음에 할래요</string>
    <string name="on_boarding_to_be_next_u"><u>다음에 할래요</u></string>
    <string name="onb_title">전시 성향 분석</string>
    <string name="onb_end_context">선택한 답변으로 당신의 취향에 꼭 맞는 전시회를 추천해드릴 준비가 끝났습니다.</string>
    <string name="onb_cancel_title">전시성향분석을 지금 끝내시겠어요?</string>
    <string name="onb_cancel_message">전시 성향분석을 미완료하면 맞춤 전시정보가 제공되지 않습니다.</string>
    <string name="onb_cancel_yes">종료</string>
    <string name="onb_cancel_no">취소</string>
    <string name="earlybird_detail_notice_title">전시회 예매 전 확인하세요.</string>
    <string name="earlybird_detail_more_title">상세정보 더보기</string>
    <string name="exhibition_detail_notice_title">전시회 예매 전 확인하세요.</string>
    <string name="exhibition_detail_more_title">상세정보 더보기</string>
    <string name="exhibition_title">전시</string>
    <string name="exhibition_custom_exhibition_title">나를 위한 맞춤 전시회만 보기</string>
    <string name="ticketing_title">예매하기</string>
    <string name="ticketing_next_btn_title">예매처로 이동</string>
    <string name="ticketing_notice">예매처로 이동이 안되시나요?</string>
    <string name="ticketing_notice_title">예매 전 주의사항</string>
    <string name="ticketing_notice_context">ㆍ 당사는 티켓 할인 수수료를 별도로 요구하지 않습니다.\nㆍ 전시 관람에 대한 유의사항은 해당 판매처 &amp; 전시장 기준에 따라주세요.\nㆍ 기재된 정보는 주최사 사정에 따라 수시로 변동될 수 있으니 예매 전 꼭 확인해주세요.</string>
    <string name="ticketing_confirm_title">예매확인</string>
    <string name="ticketing_confirm_prev_btn_title">돌아가기</string>
    <string name="ticketing_confirm_next_btn_title">예매 완료</string>
    <string name="ticketing_confirm_mall_name">인터파크</string>
    <string name="dialog_bs_filter_title">전시회 상세 검색</string>
    <string name="dialog_bs_filter_class_title">전시 분류</string>
    <string name="dialog_bs_filter_etc_title">전시 부가 정보</string>
    <string name="dialog_bs_filter_place_title">지역</string>
    <string name="dialog_bs_filter_cancel">닫기</string>
    <string name="dialog_bs_filter_ok">적용하기</string>
    <string name="exhibition_reset_title">재설정</string>
    <string name="dialog_bs_refresh_title">전시 성향 분석을 재설정하시겠습니까?</string>
    <string name="dialog_bs_refresh_context">재설정 진행 시 이전의 전시 성향 분석 결과는 삭제되며 새롭게 입력된 정보로 다시 설정됩니다.</string>
    <string name="search_hint">검색할 전시회를 입력해주세요.</string>
    <string name="search_recommend_title">추천 검색어</string>
    <string name="mybird_title">마이버드</string>
    <string name="mybird_name_title">name</string>
    <string name="mybird_email_title">email</string>
    <string name="mybird_reservation_title">예매한 전시</string>
    <string name="mybird_like_title">찜한 전시</string>
    <string name="like_detail_title">찜한 전시</string>
    <string name="reservation_detail_title">예매한 전시</string>
    <string name="mybird_no_reservation">예매한 전시가 없어요.</string>
    <string name="mybird_no_like">찜한 전시가 없어요.</string>
    <string name="setting_title">설정</string>
    <string name="setting_onb_reset_title">성향분석 재설정</string>
    <string name="setting_onb_notice_title">공지사항</string>
    <string name="setting_onb_term_title">이용약관</string>
    <string name="setting_onb_privacy_rule_title">개인정보 처리방침</string>
    <string name="setting_onb_logout_title">로그아웃</string>
    <string name="setting_onb_privacy_member_out_title">회원 탈퇴</string>
    <string name="setting_onb_app_version_title">앱 버전</string>
    <string name="setting_onb_app_version_recent">최신 버전</string>
    <string name="mybird_no_search">검색 결과가 없습니다.</string>
    <string name="term_title">이용약관</string>
    <string name="privacy_title">개인정보 처리방침</string>
    <string name="notice_title">공지사항</string>
    <string name="notice_context">안녕하세요 레이지버드에서 알립니다. 레이지버드 어플의 1.0.1 버전이 앱스토어와 플레이스토어에 정식 출시되었습니다. 편리한 어떤 기능과 그런 기능을 추가했습니다. 지금 바로 다운받아보실 수 있습니다. 꼭 다운받아보세요. 잘부탁드립니다. 언제나 화이팅입니다 아자아자 화이팅 ~</string>
    <string name="dialog_bs_logout_title">로그아웃 하시겠습니까?</string>
    <string name="dialog_bs_logout_ok">로그아웃 할게요</string>
    <string name="dialog_bs_logout_cancel">아니오</string>
    <string name="member_out_title">탈퇴하기</string>
    <string name="member_out_sub_title">탈퇴 전 반드시 확인해주세요.</string>
    <string name="member_out_context"> · 회원탈퇴를 하시면 해당 계정에 대한 회원정보 및 서비스 정보는 모두 삭제되며, 즉시 탈퇴 처리되어 복구가 불가 합니다.\n· 회원 탈퇴 후 동일 계정으로 재가입 가능하나, 기존에 저장된 정보가 모두 사라집니다.</string>
    <string name="member_out_ok">탈퇴하기</string>
    <string name="member_out_cancel">취소</string>
</resources>