<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ticketing_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_700"
        android:text="@string/ticketing_title"
        android:textColor="@color/white"
        android:textSize="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/ticketing_notice"
        app:layout_constraintTop_toBottomOf="@id/ticketing_title"
        app:layout_constraintVertical_bias="0.25">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_info" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="16dp"
            android:background="@color/or01_90" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_700"
            android:text="@string/ticketing_notice_title"
            android:textColor="@color/white"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/ticketing_notice_context"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_400"
            android:textColor="@color/white"
            android:textSize="12dp"
            tools:text=" - 주의사항이 무엇인가요?\n - 주의사항을 채워야합니다." />
    </LinearLayout>

    <TextView
        android:id="@+id/ticketing_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/roboto_500"
        android:text="@string/ticketing_notice"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@id/ticketing_next_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ticketing_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_rounded_10"
        android:backgroundTint="@color/or01"
        android:fontFamily="@font/roboto_700"
        android:text="@string/ticketing_next_btn_title"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>