<?xml version="1.0" encoding="utf-8"?><!-- deprecated -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center"
    tools:context=".ui.custom.dialog.CustomDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:background="@drawable/button_rounded_20"
        android:backgroundTint="@color/gray_150"
        android:padding="20dp">

        <TextView
            android:id="@+id/onb_cancel_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_700"
            android:gravity="left"
            android:textColor="@color/white"
            android:textSize="17dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/onb_cancel_title" />

        <TextView
            android:id="@+id/onb_cancel_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_400"
            android:textColor="@color/white"
            android:textSize="13dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/onb_cancel_title"
            tools:text="@string/onb_cancel_message" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/onb_cancel_button_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_rounded_10"
            android:backgroundTint="@color/gray_300"
            android:fontFamily="@font/roboto_700"
            android:paddingTop="16dp"
            android:paddingBottom="15dp"
            android:textColor="@color/white"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/onb_cancel_button_yes"
            app:layout_constraintTop_toBottomOf="@id/onb_cancel_message"
            tools:text="@string/onb_cancel_no" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/onb_cancel_button_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_rounded_10"
            android:backgroundTint="@color/or01"
            android:fontFamily="@font/roboto_700"
            android:paddingTop="16dp"
            android:paddingBottom="15dp"
            android:textColor="@color/white"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="@id/onb_cancel_button_no"
            app:layout_constraintLeft_toRightOf="@id/onb_cancel_button_no"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/onb_cancel_button_no"
            tools:text="@string/onb_cancel_yes" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>